# pyser

./: README.md  cookie_sales.py  index.html  index.py  index_vue.html  index_vue.py  product.py  product_list.py  pyproject.toml  table_components.py
bus-mall/: index.html  product.py  product_list.py
busmall/: index.html  index.py  product.py  product_list.py
dsa/: index.html  linked_list.py
platformer/: index.html
vue/: components.py  index.html  index.py
